had to update packages including veutify version to fix an overflow issue on the skills page, also updated the buttons on the nav bar to look a bit better, small changes on the skills pages

--- a/assets/main.css
+++ b/assets/main.css
@@ -1,32 +1,34 @@
-.page-enter-active, .page-leave-active {
-    transition: opacity .25s;
-  }
+.page-enter-active,
+.page-leave-active {
+  transition: opacity .20s;
+}
 
-  .page-enter, .page-leave-to {
-    opacity: 0;
-  }
+.page-enter,
+.page-leave-to {
+  opacity: 0;
+}
 
-  .nav-link {
-    text-decoration: none;
-    list-style: none;
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    width: 100%;
-    color: white;
-    font-weight: inherit;
-    font-size: 1.5rem;
-  }
-  
-  .social :hover,
-  .nav-link a:hover,
-  .nav-link a:active,
-  .nav-link.nuxt-link-exact-active,
-  .nav-link.nuxt-link-exact-active a {
-    color: #4db6ac;
-  }
-  
-  .social {
-    text-decoration: none;
-    color: white;
-  }
+.nav-link {
+  text-decoration: none;
+  list-style: none;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  width: 100%;
+  color: white;
+  font-weight: inherit;
+  font-size: 1.5rem;
+}
+
+.social :hover,
+.nav-link a:hover,
+.nav-link a:active,
+.nav-link.nuxt-link-exact-active,
+.nav-link.nuxt-link-exact-active a {
+  color: #4db6ac;
+}
+
+.social {
+  text-decoration: none;
+  color: white;
+}
